core/codegen/tests/ui/fails/apply/non_closure_argument.stderr
error: apply! expected a closure here:
 --> $DIR/non_closure_argument.rs:7:15
  |
7 |     apply!(0, test, |_| 0);
  |               ^^^^
